# cyberwar

./: .dockerignore  .gitignore  Dockerfile  README.md  card.py  game.py  main.py  player.py  pyproject.toml  requests.txt
events/: create.py  join.py  leave.py  search.py  signin.py  start.py
events/play/: __init__.py  attack.py  counter.py  defend.py  draw.py  end.py  skip.py  turn.py
tests/: player1.http  player2.http
webapp/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webapp/src/: App.css  App.tsx  main.tsx
webapp/src/app/: Create.tsx  Game.tsx  Lobby.tsx  Room.tsx  Start.tsx
webapp/src/game/: card.ts  events.ts  game.ts  gameState.ts  room.ts  scene.ts  scores.ts
webapp/src/store/: appStore.ts  eventSlice.ts  gameSlice.ts  lobbySlice.ts  sceneSlice.ts  store.d.ts  websocketSlice.ts
